# smart-resume-skill-gap-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/: gap_analyzer.py  job_description_parser.py  recommendations_generator.py  resume_parser.py  skill_extractor.py  utils.py
